修改build环境下的模板编译方式，清理文件任务顺序放到最后

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
             <li class="flex-1 flex flex-row-center flex-col-center">模板</li>
         </ul>
     </div>
-    <div class="df">地方ddsadf的的</div>
+    <div class="df">地方ddsadf的的撒地方</div>
     @import "footer.html"
 </body>
 </html>
