--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,32 @@
 <html>
 <head>
     @import "meta.html"
-<body>
+<body class="bg-ddd">
     @import "header.html"
-    <div>
-        <ul class="flex ui-pt-40 ui-mt-40 ui-pb-40 ui-mb-40">
-            <li class="flex-1 flex flex-row-center flex-col-center">首页d</li>
-            <li class="flex-1 flex flex-row-center flex-col-center">个人中心</li>
-            <li class="flex-1 flex flex-row-center flex-col-center">消息中心</li>
-            <li class="flex-1 flex flex-row-center flex-col-center">模板</li>
-        </ul>
+    <!-- <div class="bg-ccc ui-p-5">
+        <div class="w-center bg-fff">
+            <ul class="layout-col">
+                <li class="layout-col-item">最新视频</li>
+                <li class="layout-col-item">火爆网游</li>
+                <li class="layout-col-item">搞笑主播</li>
+            </ul>
+        </div>
     </div>
-    <div class="df">地方ddsadf的的撒地方</div>
-    @import "footer.html"
+    @import "footer.html" -->
+
+    <div class="w-center">
+
+
+        <!-- 水平三分布局 -->
+        <div class="bg-green ui-row">
+            <div class="ui-row-item">1</div>
+            <div class="ui-row-item">2</div>
+            <div class="ui-row-item">3</div>
+        </div>
+
+
+
+    </div>
 </body>
 </html>
 <script src="/home/index.js"></script>
