--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    @import "meta.html"
 <body class="bg-ddd">
-    @import "header.html"
-    <!-- <div class="bg-ccc ui-p-5">
-        <div class="w-center bg-fff">
-            <ul class="layout-col">
-                <li class="layout-col-item">最新视频</li>
-                <li class="layout-col-item">火爆网游</li>
-                <li class="layout-col-item">搞笑主播</li>
-            </ul>
-        </div>
-    </div>
-    @import "footer.html" -->
-
-    <div class="w-center">
-
-
-        <!-- 水平三分布局 -->
-        <div class="bg-green ui-row">
-            <div class="ui-row-item">1</div>
-            <div class="ui-row-item">2</div>
-            <div class="ui-row-item">3</div>
-        </div>
-
-
-
-    </div>
+    @@include('header.html', {
+        contents:'I am so smart',
+        title: '阿斯蒂芬'
+    })
 </body>
 </html>
-<script src="/home/index.js"></script>
